<resources>
    <string name="app_name">projeto</string>
    <string name="login">Login</string>
    <string name="insert_email">Insert Email</string>
    <string name="email">Email</string>
    <string name="insert_password">Insert Password</string>
    <string name="password">Password</string>
    <string name="log_in">Login</string>
    <string name="create_account">Create Account\n</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="documents">Documents</string>
    <string name="requests">Requests</string>
    <string name="home">Home</string>
    <string name="menu">Menu\n</string>
    <string name="app">App</string>
    <string name="ndOpen">ndOpen</string>
    <string name="ndClose">ndClose</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="singup">Singup</string>
    <string name="please_fill_out_the_following_fields_to_signup">Please fill out the following fields to signup</string>
    <string name="username">Username</string>
    <string name="back_to_login">Back to login</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="technician">Technician</string>
    <string name="created_at">Created at</string>
    <string name="create_request">Create Request</string>
    <string name="ano">Ano</string>
    <string name="insert_username">Insert Username</string>
    <string name="welcome">Welcome</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone">Phone</string>
    <string name="change_your_profile">Change your profile</string>
    <string name="guardar">Guardar</string>
    <string name="url_da_api">URL da API</string>
    <string name="server_for_api">Server for API</string>
    <string name="config_the_url">Config the url</string>
    <string name="add_request">Add Request</string>
    <string name="save_request">Save Request</string>
    <string name="save_your_profile">Save your profile</string>
    <string name="save_profile">Save Profile</string>
    <string name="rating">Rating</string>
    <string name="save">save</string>
    <string name="no_profile_found_please_create_one">No profile found. Please create one.</string>
    <string name="create_profile">Create Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="status">Status</string>
    <string name="priority">Priority:</string>
    <string name="edit_request">Edit Request</string>
</resources>